argocd/bootstrap/resources/argocd_dashboard_ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-dashboard
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`argocd.local.pleejr.org`)
    kind: Rule
    priority: 10
    services:
    - name: argocd-server
      port: 443
  - match: Host(`argocd.local.pleejr.org`) && Header(`Content-Type`, `application/grpc`)
    kind: Rule
    priority: 11
    services:
    - name: argocd-server
      port: 80
      scheme: h2c
  tls:
    secretName: argocd-cert-prod
